--- a/Section5_WebStructure/navMenu.html
+++ b/Section5_WebStructure/navMenu.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>header</title> 
+        <title>nav menu</title> 
 
         <!-- iFrames are used to show content from a different website to yours -->
-        <meta name="description" content="header"> 
+        <meta name="description" content="nav menu"> 
         <meta name="keywords" content="HTML, CSS, JavaScript">
         <meta name="author" content="John Doe">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,6 +24,24 @@
                     <input type="submit" value=">">
                 </form>
             </div>
+            <nav>
+                <ul>
+                    <li><a href="../Section1_Introduction to HTML5/Hello World.html">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Contact</a></li>
+                    <br>
+                    <li>
+                        <details>
+                            <summary><a href="../Section1_Introduction to HTML5/Hello World.html">CollapseElement nav link</a></summary>
+                            <div>
+                                <p><a href="../Section2_HTML5 Tags/image.html">CollapseElement nav link child link</a></p>
+                            </div>
+                        </details>
+                    </li>
+                </ul>
+            </nav>
         </header>
     </body>
 </html>
