--- a/Section5_WebStructure/addingContent.html
+++ b/Section5_WebStructure/addingContent.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Banner</title> 
+        <title>adding content</title> 
 
         <!-- iFrames are used to show content from a different website to yours -->
-        <meta name="description" content="Banner"> 
+        <meta name="description" content="adding content"> 
         <meta name="keywords" content="HTML, CSS, JavaScript">
         <meta name="author" content="John Doe">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,14 +41,26 @@
                     </li>
                 </ul>
             </nav>
-            <!-- An HTML banner allows you to fully customize its appearance. In addition, you can define forms, tables, and graphs, as well as select multiple images to display as one banner. Your HTML banner can be formatted in an unlimited number of ways. -->
-
-            <!-- section tag is a structural html element used to group together related elements. -->
-            <!-- more semantic element then div. used for thematic grouping of content
-                 div tage is often used to create layouts structures or group elements-->
+            <!-- An HTML banner allows you to fully customize its appearance. In addition, you can define forms, tables, and graphs, as well as select multiple images to display as one banner. 
+                Your HTML banner can be formatted in an unlimited number of ways. -->
             <section>
                 <a href="../Section3_Forms in HTML TAG/registration_form.html" alt="Banner 1"> Registration Form</a><br>
                 <a href="../Section3_Forms in HTML TAG/login_form.html" alt="Banner 2">Login Form</a>
+            </section>
+
+            <section>
+                <!-- independent, self-contained content: -->
+                <article>
+                    <main><!-- Specify the main content of the document: -->
+                        <h1>Header 1 for the adding content</h1>
+                        <p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah 
+                            blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah. 
+                        </p>
+                        <p>meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh 
+                            meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh meh 
+                        </p>
+                    </main>
+                </article>
             </section>
         </header>
     </body>
